@@ -26,6 +26,8 @@ import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
+import org.eclipse.jface.resource.ImageDescriptor;
+import org.eclipse.jface.resource.ImageRegistry;
 import org.eclipse.jface.text.BadLocationException;
 import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IDoubleClickListener;
@@ -49,6 +51,11 @@ import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.PlatformUI;
 
 public class CoreMessagesViewer {
+
+	static ImageRegistry imageRegistry = new ImageRegistry();
+
+	public static final String VALGRIND_ERROR = "Valgrind_Errore"; //$NON-NLS-1$
+	public static final String VALGRIND_ERROR_IMAGE = "icons/valgrind-error.gif"; //$NON-NLS-1$
 	public IDoubleClickListener doubleClickListener;
 	public ITreeContentProvider contentProvider;
 	public IAction expandAction;
@@ -59,6 +66,11 @@ public class CoreMessagesViewer {
 	public CoreMessagesViewer(Composite parent, int style) {
 		viewer = new TreeViewer(parent, SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL | style);
 		viewer.getControl().setLayoutData(new GridData(GridData.FILL_BOTH));
+		if (imageRegistry.getDescriptor(VALGRIND_ERROR) == null) {
+			ImageDescriptor d = ValgrindUIPlugin.getImageDescriptor(VALGRIND_ERROR_IMAGE);
+			if (d != null)
+				imageRegistry.put(VALGRIND_ERROR, d);
+		}
 		contentProvider = new ITreeContentProvider() {
 
 			public Object[] getChildren(Object parentElement) {
@@ -101,7 +113,7 @@ public class CoreMessagesViewer {
 					image = DebugUITools.getImage(IDebugUIConstants.IMG_OBJS_STACKFRAME);
 				}
 				else if (element instanceof ValgrindError)  {
-					image = PlatformUI.getWorkbench().getSharedImages().getImage(ISharedImages.IMG_OBJS_ERROR_TSK);
+					image = imageRegistry.get(VALGRIND_ERROR);
 				}
 				else {
 					image = PlatformUI.getWorkbench().getSharedImages().getImage(ISharedImages.IMG_OBJS_INFO_TSK);
